# crypto-ops

./: .env.cdp  .env.exchange_sandbox  .env.sample  .gcloudignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.local  Procfile  READ.md  README.md  TOOLS.md  apply-paper.yaml  auto_rebalancer.py  check_db.py  check_db_verify.py  check_symbols.py  cloudbuild.yaml  daily.def  dashboard.py  dashboard_master.py  env.yaml  execute_rebalance.py  lifecycle.json  monitor_sandbox.py  monitoring-5xx.json  monitoring-5xx.yaml  monitoring-latency.json  monitoring-latency.yaml  order_simulator.py  portfolio_monitor.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  safe_dashboard.ps1  sandbox_balances.json  sandbox_dashboard.ps1  snapshot-daily.yaml  (+10 more)
.codex/: policies.md
configs/: policy.rebalancer.json  policy.rebalancer.json.bak
crypto-ops/: .env  .env.backup  .env.sandbox  .gitignore  .gloudignore  Procfile  README-Local.md  requirements.txt
cryptoops_llm_fix_bundle/: ci.yml  constraints.py  main.py  requirements.txt  state.py
data/: ledger.db
docs/: PRD_v0.2.md  Prognosis_v0.2.md  ROADMAP.md  Runbook_v0.2.md  STATUS.md
libs/: logger.py
plans/: plan_20250815_084547.json  plan_20250815_195513.json  plan_20250816_090502.json  plan_20250816_122546.json  plan_20250816_124410.json  plan_20250816_174613.json  plan_20250817_090502.json  plan_20250822_090502.json
scratch/: probe.py
scripts/: add_instruments.py  backfill_prices_coinbase.py  bootstrap.ps1  convert_policy_yaml_to_json.py  normalize_price_ts_epoch.py  (+1 more)
win/: enter.ps1  (+22 more)
(+243 files in other folders)
