[project]
name = "CryptoOps"
version = "0.0.1"
description = "CryptoOps minimal scaffold (ingest + metrics)."
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-select = ["E","F","I","UP"]
fix = true
src = ["src","tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false